force-app/main/default/objects/Campaign/fields/Acteur2__c.field-meta.xml
<CustomField>
    <fullName>Acteur2__c</fullName>
    <label>Acteur2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>