force-app/main/default/objects/Campaign/fields/Acteur3__c.field-meta.xml
<CustomField>
    <fullName>Acteur3__c</fullName>
    <label>Acteur3</label>
    <length>80</length>
    <type>Text</type>
</CustomField>