force-app/main/default/objects/Campaign/fields/Acteur__c.field-meta.xml
<CustomField>
    <fullName>Acteur__c</fullName>
    <label>Acteur</label>
    <length>80</length>
    <type>Text</type>
</CustomField>