force-app/main/default/objects/Campaign/fields/AgeMinimum__c.field-meta.xml
<CustomField>
    <fullName>AgeMinimum__c</fullName>
    <label>Age minimum</label>
    <length>50</length>
    <type>Text</type>
</CustomField>