force-app/main/default/objects/Campaign/fields/Cinema__c.field-meta.xml
<CustomField>
    <fullName>Cinema__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cinéma</label>
    <referenceTo>Complexe__c</referenceTo>
    <relationshipLabel>Campagnes</relationshipLabel>
    <relationshipName>Campagnes</relationshipName>
    <type>Lookup</type>
</CustomField>