force-app/main/default/objects/Campaign/fields/Commentaire__c.field-meta.xml
<CustomField>
    <fullName>Commentaire__c</fullName>
    <label>Commentaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>