force-app/main/default/objects/Campaign/fields/Contenu_Email__c.field-meta.xml
<CustomField>
    <fullName>Contenu_Email__c</fullName>
    <label>Contenu Email</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>