force-app/main/default/objects/Campaign/fields/DateHeureEditionListing__c.field-meta.xml
<CustomField>
    <fullName>DateHeureEditionListing__c</fullName>
    <label>Date et heure de l&#39;édition du listing</label>
    <type>DateTime</type>
</CustomField>