force-app/main/default/objects/Campaign/fields/DateHeureRendezVous__c.field-meta.xml
<CustomField>
    <fullName>DateHeureRendezVous__c</fullName>
    <label>Date et heure du rendez-vous</label>
    <type>DateTime</type>
</CustomField>