force-app/main/default/objects/Campaign/fields/DateHeureSeance__c.field-meta.xml
<CustomField>
    <fullName>DateHeureSeance__c</fullName>
    <label>Date et heure de la séance</label>
    <type>DateTime</type>
</CustomField>