force-app/main/default/objects/Campaign/fields/EquipeFilm__c.field-meta.xml
<CustomField>
    <fullName>EquipeFilm__c</fullName>
    <label>Equipe du film</label>
    <length>255</length>
    <type>Text</type>
</CustomField>