force-app/main/default/objects/Campaign/fields/Film__c.field-meta.xml
<CustomField>
    <fullName>Film__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Film</label>
    <referenceTo>Film__c</referenceTo>
    <relationshipLabel>Campagnes</relationshipLabel>
    <relationshipName>Campagnes</relationshipName>
    <type>Lookup</type>
</CustomField>