force-app/main/default/objects/Campaign/fields/Langue__c.field-meta.xml
<CustomField>
    <fullName>Langue__c</fullName>
    <label>Langue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Français</fullName>
            </value>
            <value>
                <fullName>Flamand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>