force-app/main/default/objects/Campaign/fields/NumberOfParticipants__c.field-meta.xml
<CustomField>
    <fullName>NumberOfParticipants__c</fullName>
    <label>Nombre de participants</label>
    <summarizedField>CampaignMember.NumberOfParticipants__c</summarizedField>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>