force-app/main/default/objects/Campaign/fields/Realisateurs__c.field-meta.xml
<CustomField>
    <fullName>Realisateurs__c</fullName>
    <label>Réalisateurs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>