force-app/main/default/objects/Campaign/fields/Surbooking__c.field-meta.xml
<CustomField>
    <fullName>Surbooking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Surbooking</label>
    <type>Checkbox</type>
</CustomField>