force-app/main/default/objects/Campaign/fields/Synopsis__c.field-meta.xml
<CustomField>
    <fullName>Synopsis__c</fullName>
    <label>Synopsis</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>