force-app/main/default/objects/Campaign/fields/TECH_CodeCinema__c.field-meta.xml
<CustomField>
    <fullName>TECH_CodeCinema__c</fullName>
    <formula>Cinema__r.CodeComplexe__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_CodeCinema</label>
    <type>Text</type>
</CustomField>