force-app/main/default/objects/Campaign/fields/TECH_CodeFilm__c.field-meta.xml
<CustomField>
    <fullName>TECH_CodeFilm__c</fullName>
    <formula>Film__r.Tech_CodeFilm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_CodeFilm</label>
    <type>Text</type>
</CustomField>