force-app/main/default/objects/Campaign/fields/TitreFilm__c.field-meta.xml
<CustomField>
    <fullName>TitreFilm__c</fullName>
    <label>Titre du film</label>
    <length>200</length>
    <type>Text</type>
</CustomField>