force-app/main/default/objects/Campaign/fields/TypeOperation__c.field-meta.xml
<CustomField>
    <fullName>TypeOperation__c</fullName>
    <label>Type d&#39;opération</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AVP</fullName>
            </value>
            <value>
                <fullName>AVE</fullName>
            </value>
            <value>
                <fullName>Label</fullName>
            </value>
            <value>
                <fullName>Rendez-vous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>