force-app/main/default/objects/Campaign/recordTypes/AVE.recordType-meta.xml
<RecordType>
    <fullName>AVE</fullName>
    <active>true</active>
    <label>AVE</label>
</RecordType>