force-app/main/default/objects/Campaign/recordTypes/AVP.recordType-meta.xml
<RecordType>
    <fullName>AVP</fullName>
    <active>true</active>
    <label>AVP</label>
</RecordType>