force-app/main/default/objects/Campaign/recordTypes/LABEL.recordType-meta.xml
<RecordType>
    <fullName>LABEL</fullName>
    <active>true</active>
    <label>LABEL</label>
</RecordType>