force-app/main/default/objects/Campaign/recordTypes/RDV.recordType-meta.xml
<RecordType>
    <fullName>RDV</fullName>
    <active>true</active>
    <label>RDV</label>
</RecordType>